# sharad_ratatui

./: .gitignore  Cargo.toml  README.md  ai_structure.md  character_sheet.json  dialogue.json  dist-workspace.toml  prompt.json  prompt_new.json  response.json  update_character_sheet.json
assets/assistant_functions/: create_character_sheet.json  generate_character_image.json  update_contacts.json
assets/assistant_instructions/: instructions.json  schema.json
assets/docs/: attributes.md  derived_attributes.md  lifestyles.md
assistant_functions/: create_character_sheet.json  perform_dice_roll.json  schema.json  update_augmentation.json  update_basic_attributes.json  update_inventory.json  update_matrix_attributes.json  update_qualities.json  update_skills.json
assistant_instructions/: instructions.json  schema.json
functions/: perform_dice_roll.json  update_basic_attributes.json  update_contacts.json  update_matrix_attributes.json  update_qualities.json
src/: ai.rs  ai_response.rs  app.rs  app.rs~  app_state.rs  assistant.rs  audio.rs  character.rs  cleanup.rs  context.rs  descriptions.rs  dice.rs  error.rs  game_state.rs  image.rs  imager.rs  lib.rs  logging.rs  main.rs  message.rs  save.rs  settings.rs  settings_state.rs  tui.rs  ui.rs  utils.rs
src/rig/: agents.rs  archivist.rs  asset_loader.rs  cruncher.rs  mod.rs  narrator.rs  strategist.rs  vectors.rs
src/ui/: api_key_input.rs  constants.rs  create_image.rs  descriptions.rs  draw.rs  game.rs  image_menu.rs  input.rs  load_game.rs  load_menu.rs  main_menu.rs  main_menu_fix.rs  mod.rs  rain.rs  save_name_input.rs  settings.rs  settings_menu.rs  spinner.rs  textarea.rs  utils.rs  widgets.rs
src/ui/character_sheet/: augmentations.rs  inventory.rs  mod.rs  qualities.rs  resources.rs  sheet.rs
src/ui/component/: component.rs  mod.rs
tests/: dummy_create_character_sheet.json  dummy_update_character_sheet.json  tests.rs
wix/: main.wxs
