[package]
name = "sharad_ratatui"
version = "0.1.33"
edition = "2021"
repository = "https://github.com/prohaller/sharad_ratatui"
authors = ["Roland Haller <haller.roland@gmail.com>"]

[package.metadata.wix]
upgrade-guid = "B2B70952-3CBF-481B-9517-372DB1D3025C"
path-guid = "8293C3E7-58FA-4F8E-85D1-A4BF37400653"
license = false
eula = false

[dependencies]
async-openai = "0.24.0"
chrono = "0.4.38"
cleanup = "0.1.1"
copypasta = "0.10.1"
cpal = "0.15.3"
crossterm = "0.28.1"
ctrlc = "3.4.5"
futures = "0.3.30"
hound = "3.5.1"
hyphenation = "0.8.4"
include_dir = "0.7.4"
lame = "0.1.3"
libc = "0.2.158"
log = "0.4.22"
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = { version = "0.28.1", features = ["widget-calendar"] }
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["json"] }
rodio = "0.19.0"
ropey = "1.6.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
textwrap = { version = "0.16.1", features = ["hyphenation"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tui-input = "0.10.1"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"
uuid = { version = "1.10.0", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
