[package]
name = "sharad_ratatui"
version = "0.2.9"
edition = "2024"
repository = "https://github.com/prohaller/sharad_ratatui"
authors = ["Roland Haller <haller.roland@gmail.com>"]
description = "A terminal based Shadowrun RPG Using AI as a Game Master"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wix]
upgrade-guid = "B2B70952-3CBF-481B-9517-372DB1D3025C"
path-guid = "8293C3E7-58FA-4F8E-85D1-A4BF37400653"
license = false
eula = false

[dependencies]
anyhow = "1.0.97"
async-openai = "0.28.0"
chrono = "0.4.40"
color-eyre = "0.6.3"
copypasta = "0.10.1"
cpal = "0.15.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["full"] }
dir = "0.1.2"
enum_dispatch = "0.3.13"
futures = "0.3.31"
hound = "3.5.1"
image = "0.25.6"
include_dir = "0.7.4"
log = "0.4.27"
once_cell = "1.21.3"
pdfium-render = "0.8.32"
rand = "0.9.0"
ratatui = "0.29.0"
ratatui-image = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
rig-core = { version = "0.13.0", features = ["derive", "pdf"] }
rig-sqlite = "0.1.11"
rodio = "0.20.1"
self_update = "0.42.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
signal-hook = "0.3.17"
sqlite-vec = "0.1.6"
strum = "0.27.1"
strum_macros = "0.27.1"
textwrap = { version = "0.16.2", features = ["hyphenation"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rusqlite = "0.6.0"
tokio-util = "0.7.14"
tracing = "0.1.41"
# tui-textarea = "0.7.0"
tui-textarea = { git = "https://github.com/ProHaller/tui-textarea" }
uuid = { version = "1.16.0", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch]

[dev-dependencies]
tempfile = "3.8"
